namespace Zoo.Presentation.ConsoleApp;

public enum MenuOption
{
    Quit = 0,
    AdvanceTurn = 1,
    Canteen = 2,
    AddAnimal = 3,
    BuyHabitat = 4,
    SellAnimal = 5,
    SellHabitat = 6,
    ShowStatus = 7
}
