@startuml ZooSimulatorAppInfraUI
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam dpi 120
top to bottom direction

title Zoo Simulator - Application and Console UI

package "Presentation.ConsoleApp" {
  class Program
  class ZooConsoleApp {
    +Run() : void
  }

  class ConsoleInput
  class ZooConsolePrinter

  enum MenuOption {
    AdvanceTurn
    Canteen
    AddAnimal
    BuyHabitat
    SellAnimal
    SellHabitat
    ShowStatus
    Quit
  }
}

package "Application.Simulation" {
  class ZooSimulationService {
    +NextTurn() : void
    +BuyAnimal() : bool
    +SellAnimal() : bool
    +BuyFood() : bool
    +BuyHabitat() : bool
    +SellHabitat() : bool
  }
}

package "Domain.Events" {
  class ZooEvent
}

Program --> ZooConsoleApp
ZooConsoleApp --> ConsoleInput
ZooConsoleApp --> ZooConsolePrinter
ZooConsoleApp --> ZooSimulationService
ZooConsolePrinter ..> ZooEvent
ZooConsoleApp ..> MenuOption

note bottom
Infrastructure folders are currently placeholders.
The active UI path is the interactive console application.
end note
@enduml
